<resources>
    <string name="app_name">Make Decision</string>
    <string name="home">Home</string>
    <string name="result">Result</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_post">Add Post</string>
    <string name="groups">Groups</string>
    <string name="profile">Profile</string>
</resources>
